# raytracer

./: .gitignore  Cargo.toml
src/: main.rs
src/geometry/: bounded_volume_hierarchy.rs  mod.rs  ray.rs  vector_3d.rs
src/scene/: bounding_box.rs  hit_record.rs  hittable.rs  hittable_list.rs  mod.rs  moving_sphere.rs  scene.rs  sphere.rs  world.rs
src/scene/materials/: dielectric.rs  lambertian.rs  material.rs  metal.rs  mod.rs
src/scene/textures/: checker.rs  mod.rs  solid.rs  texture.rs
src/util/: camera.rs  color.rs  mod.rs  point.rs  vector_3d.rs
