[package]
name = "raytracer"
version = "0.1.0"
authors = ["Nicholas Hansen <ndhansen@leskat.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.0"
clap = { version = "4.3.3", features = ["derive"] }
num = "0.4.0"
rand = "0.8.4"
rayon = "1.5.1"
